# yum-yr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss  projects.html
src/: app.rs
src/app/: home.rs  navbar.rs  projects.rs  routes.rs  secure.rs
src/app/home/: farmer_icon.rs
