[package]
name = "yum-yr"
version = "0.1.0"
edition = "2021"
description = "A landing page, using rust and yew. Packaged with Trunk. Running on the Web in WASM."
readme = "README.md"
repository = "https://github.com/Yumshot/yum-yr"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
yew-router = "0.17.0"
